<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/employeeListFragment">

    <fragment
        android:id="@+id/employeeListFragment"
        android:name="com.vaibhav.employeemanagement.ui.employee.EmployeeListFragment"
        android:label="@string/employees"
        tools:layout="@layout/fragment_employee_list">

        <action
            android:id="@+id/action_employeeListFragment_to_addEditEmployeeFragment"
            app:destination="@id/addEditEmployeeFragment" />

        <action
            android:id="@+id/action_employeeListFragment_to_employeeDetailFragment"
            app:destination="@id/employeeDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/addEditEmployeeFragment"
        android:name="com.vaibhav.employeemanagement.ui.employee.AddEditEmployeeFragment"
        android:label="@string/add_employee"
        tools:layout="@layout/fragment_add_edit_employee">

        <argument
            android:name="employee"
            app:argType="com.vaibhav.employeemanagement.data.model.Employee"
            app:nullable="true"
            android:defaultValue="@null" />

    </fragment>

    <fragment
        android:id="@+id/employeeDetailFragment"
        android:name="com.vaibhav.employeemanagement.ui.employee.EmployeeDetailFragment"
        android:label="@string/employee_details"
        tools:layout="@layout/fragment_employee_detail">

        <argument
            android:name="employee"
            app:argType="com.vaibhav.employeemanagement.data.model.Employee" />

        <action
            android:id="@+id/action_employeeDetailFragment_to_addEditEmployeeFragment"
            app:destination="@id/addEditEmployeeFragment" />

    </fragment>

</navigation>
